Restyles search result, adds cancel button

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -58,6 +58,7 @@ h1, h2, h3, h4, h5, h6 { color: gold; }
     background-color: #fff;
     border-radius: 4px;
     .title, .year {
-        padding-right: 15px;
+        margin-right: 15px;
     }
+    > button { margin-right: 15px; }
 }
