--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,6 +3,15 @@ body {
 }
 h1, h2, h3, h4, h5, h6 { color: gold; }
 
+.util {
+    &.accessible-text {
+        position: absolute;
+        left: -100vw;
+        width: 1px;
+        height: 1px;
+    }
+}
+
 .header {
     display: flex;
     .header-text {
@@ -15,12 +24,6 @@ h1, h2, h3, h4, h5, h6 { color: gold; }
             display: flex;
             .search-input {
                 margin-right: 1rem;
-            }
-            > .label {
-                position: absolute;
-                left: -100vw;
-                width: 1px;
-                height: 1px;
             }
         }
     }
