--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -4,6 +4,7 @@ body {
 }
 h1, h2, h3, h4, h5, h6 { color: gold; }
 
+
 .util {
     &.accessible-text {
         position: absolute;
@@ -14,7 +15,7 @@ h1, h2, h3, h4, h5, h6 { color: gold; }
 }
 
 h1.header-text {
-    font-family: 'Contrail One', cursive;
+    font-family: 'Contrail One', sans-serif;
     font-size: 7rem;
 }
 
@@ -79,13 +80,20 @@ h1.header-text {
 }
 
 .search-result {
-    display: inline-block;
-    padding: 10px 15px;
-    margin-right: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    align-items: center;
     background-color: #fff;
     border-radius: 4px;
     .title, .year {
-        margin-right: 15px;
+        font-family: 'Contrail One', sans-serif;
+        font-size: 2rem;
     }
-    > button { margin-right: 15px; }
+    .button-wrapper {
+        text-align: right;
+        > button:first-of-type {
+            margin-right: 1rem;
+        }
+    }
 }
