--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,7 @@
 body {
     background-color: rgba(5,0,5,.93);
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 }
 h1, h2, h3, h4, h5, h6 { color: gold; }
 
@@ -85,14 +86,19 @@ h1.header-text {
         display: flex;
         flex-direction: column;
         text-align: right;
-        >.badge {
-            margin: .25rem;
+        .watched {
+            padding: .25rem;
+            font-size: 1rem;
+            color: #fff;
+            text-align: center;
+            background-color: forestgreen;
+            border-radius: .25rem;
         }
-        .watched.badge {
-            background-color: #168700;
-        }
-        .remove.button {
-            margin-top: 1rem;
+        .button-group {
+            margin-top: .5rem;
+            >button:first-of-type {
+                margin-right: .5rem;
+            }
         }
     }
 }
@@ -112,6 +118,54 @@ h1.header-text {
         text-align: right;
         > button:first-of-type {
             margin-right: 1rem;
+        }
+    }
+}
+
+.edit-form-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    .edit-form {
+        position: absolute;
+        margin: 3rem auto;
+        width: 60vw;
+        left: 50%;
+        background-color: white;
+        z-index: 1;
+        transform: translateX(-30vw);
+        padding: 4rem;
+        border: 1px solid #222;
+        border-radius: 1rem;
+
+        .title {
+            font-size: 2.5rem;
+            color: #485fde;
+            font-family: Contrail One,sans-serif;
+        }
+
+        .form-field {
+            margin: 2rem 0;
+
+            > .textarea,
+            > .range-input {
+                font-size: 1.5rem;
+                width: 100%;
+            }
+            > .form-label {
+                display: block;
+                margin: .5rem 0;
+                font-size: 1.5rem;
+                color: #333;
+            }
+            .rating-checkbox {
+                margin-left: 1rem;
+            }
+            > button:last-of-type {
+                margin-right: 1rem;
+            }
         }
     }
 }
