--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -86,6 +86,7 @@ h1.header-text {
         display: flex;
         flex-direction: column;
         text-align: right;
+        min-width: 24vw;
         .watched {
             padding: .25rem;
             font-size: 1rem;
