--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -88,7 +88,8 @@ h1.header-text {
         text-align: right;
         min-width: 24vw;
         .watched {
-            padding: .25rem;
+            padding: .25rem .75rem;
+            margin-left: auto;
             font-size: 1rem;
             color: #fff;
             text-align: center;
@@ -132,15 +133,18 @@ h1.header-text {
     .edit-form {
         position: absolute;
         margin: 3rem auto;
-        width: 60vw;
+        width: 90vw;
         left: 50%;
         background-color: white;
         z-index: 1;
-        transform: translateX(-30vw);
+        transform: translateX(-45vw);
         padding: 4rem;
-        border: 1px solid #222;
+        border: 1px solid #9e9e9e;
         border-radius: 1rem;
-
+        @media ( min-width: 768px ) {
+            width: 60vw;
+            transform: translateX(-30vw);
+        }
         .title {
             font-size: 2.5rem;
             color: #485fde;
@@ -154,6 +158,7 @@ h1.header-text {
             > .range-input {
                 font-size: 1.5rem;
                 width: 100%;
+                border: 1px solid #9e9e9e;
             }
             > .form-label {
                 display: block;
