--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -131,7 +131,7 @@ h1.header-text {
     width: 100%;
     height: 100%;
     .edit-form {
-        position: absolute;
+        position: fixed;
         margin: 3rem auto;
         width: 90vw;
         left: 50%;
