--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -90,6 +90,7 @@ h1.header-text {
         .watched {
             padding: .25rem .75rem;
             margin-left: auto;
+            max-width: 75px;
             font-size: 1rem;
             color: #fff;
             text-align: center;
